--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@mountains-digital/ff4cf-client",
-  "version": "1.0.0",
+  "version": "1.0.1",
   "description": "Feature Flags for Cloudflare (F4CF) RPC client library for Cloudflare Workers",
   "main": "dist/index.js",
   "types": "dist/index.d.ts",
@@ -11,7 +11,11 @@
     "build": "tsc",
     "prepublishOnly": "npm run build"
   },
-  "keywords": ["feature-flags", "cloudflare-workers", "ff4cf"],
+  "keywords": [
+    "feature-flags",
+    "cloudflare-workers",
+    "ff4cf"
+  ],
   "author": "Mountains Digital",
   "license": "MIT",
   "devDependencies": {
